new_tests/semantics/type/bad/082_CLASSTEMPLATE_1.cm
/*

*/

class A<discr t, scalar s> {
    public x:t
    public y:s
    public method print() => Void {
        cout << x + y << endl
    }
}

def a:A<Int,String> = new A<Int,String>(x=5,y='hi')
